# factory-catalogue-app

./: .env_development  .env_production  .gitignore  README.md  development_requirements.txt  postman_collection.json  pre-commit-config.yaml  pyproject.toml  pyproject.toml_bk  requirements.txt  requirements.txt_bk  sample_add_factory_resp.json  sample_get_factory_resp.json  setup.cfg
apps/admin_app/: main.py
apps/admin_app/routes/: factories.py  health.py
apps/search_app/: main.py
apps/search_app/routes/: factories.py  health.py
libs/catalogue/: add_data.sql  db.py  models.py  schemas.py
libs/common/: exceptions.py  logging.py  middleware.py  settings.py
libs/utils/: helper.py
tests/: conftest.py  test_admin_app.py  test_search_app copy.py  test_search_app.py
