[tool.poetry]
name = "factory-catalogue-app"
version = "0.1.0"
description = "A production-ready FastAPI project template"
authors = ["Saikat Chakrabarty <saikat.chakrabarty@yahoo.com>"]
packages = [{ include = "apps" }, { include = "libs" }]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.85.0"
uvicorn = { extras = ["standard"], version = "^0.18.0" }
pydantic = "^1.10.0"
python-dotenv = "^0.21.0"
sqlalchemy = "^1.4"
alembic = "^1.7.0"
# Additional production dependencies...

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
flake8 = "^4.0.0"
black = "^22.0.0"
isort = "^5.10.0"
mypy = "^0.930"
pre-commit = "^2.20.0"
# Additional dev tools...

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
